--- a/PortalSocios/PortalSocios/Views/Account/Login.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/Login.cshtml
@@ -40,7 +40,7 @@
                     @Html.ActionLink("Criar uma conta nova?", "Register")
                 </p>
                 <p class="col-md-12">
-                    @Html.ActionLink("Esqueceste-te da tua palavra-chave?", "ForgotPassword")
+                    @Html.ActionLink("Esqueceste-te da tua palavra-passe?", "Indisponivel", "Erros")
                 </p>
             }
         </section>
