--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -3,7 +3,6 @@
 <head>
     <meta charset="utf-8" />
     <title> Sobre | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
-    <link rel="stylesheet" href="~/Content/Site.css" />
     <script>
         // altera a foto do autor para o logo do curso
         function alterElems() {
@@ -31,7 +30,7 @@
                 <img id="foto" class="img-circle img-responsive img-center" src="~/Content/Imagens/fotorc.jpg" />
                 <h3>Utilizadores</h3>
                 <p><span class="tipo">Role:</span> Funcionario</p>
-                <p><span class="tipo">E-mail:</span> dalves@cdcb.pt</p>
+                <p><span class="tipo">E-mail:</span> dalves@coxos.pt</p>
                 <p><span class="tipo">Palavra-chave:</span> 123qwe#</p>
                 <br />
                 <p><span class="tipo">Role:</span> Socio</p>
