--- a/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Index.cshtml
@@ -76,6 +76,7 @@
                         </td>
                         <td class="colunas">
                             @Html.ActionLink("Editar", "Edit", new { id = item.PagamentoID }) |
+                            @Html.ActionLink("Detalhes", "Details", new { id = item.PagamentoID }) |
                             @Html.ActionLink("Eliminar", "Delete", new { id = item.PagamentoID })
                         </td>
                     }
