--- a/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
@@ -1,10 +1,19 @@
 ﻿@model System.Web.Mvc.HandleErrorInfo
 
-@{
-    ViewBag.Title = "Error";
-}
-
-<hgroup>
-    <h1 class="text-error">Error.</h1>
-    <h2 class="text-error">An error occurred while processing your request.</h2>
-</hgroup>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Erro | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <style>
+    </style>
+    <script>
+    </script>
+</head>
+<body>
+    <div class="jumbotron" style="text-align:center">
+        <h1>ERRO!</h1>
+        <p>Ocorreu um erro a processar a página...</p>
+    </div>
+</body>
+</html>
