--- a/PortalSocios/PortalSocios/Views/Shared/NotFound.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/NotFound.cshtml
@@ -1,13 +1,8 @@
-﻿
-@{
-    ViewBag.Title = "NotFound";
-}
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-    <title>Erro! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <title>Erro 404 | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
     </style>
     <script>
