--- a/PortalSocios/PortalSocios/Views/Account/ForgotPassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Account/ForgotPassword.cshtml
@@ -1,18 +1,26 @@
 ﻿@model PortalSocios.Models.ForgotPasswordViewModel
+@{
+    ViewBag.Title = "Forgot your password?";
+}
 
-<div class="titulo"><h2>Esqueceste-te da tua palavra-passe?</h2></div>
+<h2>@ViewBag.Title.</h2>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" })) {
     @Html.AntiForgeryToken()
+    <h4>Enter your email.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
-    <div class="container painel">
-        <div class="col-md-12 form-inline">
-
-            @*Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "E-mail" })*@
-            <!--<input type="submit" class="btn btn-primary" value="Enviar" />-->
+    <div class="form-group">
+        @Html.LabelFor(m => m.Email, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.Email, new { @class = "form-control" })
         </div>
-     </div>
+    </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="submit" class="btn btn-default" value="Email Link" />
+        </div>
+    </div>
 }
 
 @section Scripts {
