--- a/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
@@ -1,15 +1,12 @@
 ﻿@model PortalSocios.Models.ChangePasswordViewModel
-@{
-    ViewBag.Title = "Change Password";
-}
 
-<h2>@ViewBag.Title.</h2>
+<h2 class="titulo">Alterar a Palavra-passe</h2>
+<hr />
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
     @Html.AntiForgeryToken()
-    <h4>Change Password Form</h4>
-    <hr />
+    
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(m => m.OldPassword, new { @class = "col-md-2 control-label" })
@@ -32,7 +29,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Change password" class="btn btn-default" />
+            <input type="submit" value="Alterar" class="btn btn-primary" />
         </div>
     </div>
 }
