--- a/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Details.cshtml
@@ -1,35 +1,56 @@
 ﻿@model PortalSocios.Models.Socios
 
-<div class="titulo"><h3>Detalhes do Sócio</h3></div>
-<hr />
-<div class="container painel">
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.NumSocio)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.NumSocio)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Nome)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Nome)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.BI)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.BI)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.NIF)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.NIF)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.DataNasc)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.DataNasc)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Email)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Email)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Telemovel)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Telemovel)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Morada)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Morada)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.CodPostal)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.CodPostal)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Fotografia)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Fotografia)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.DataInscr)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.DataInscr)</div>
-    <div class="col-lg-6" style="text-align:right;">@Html.DisplayNameFor(model => model.Categoria.Nome)</div>
-    <div class="col-lg-6" style="text-align:left;">@Html.DisplayFor(model => model.Categoria.Nome)</div>
-</div>
-<div class="col-lg-12" style="text-align:center;">
-    @Html.ActionLink("Voltar à lista", "Index") |
-    @Html.ActionLink("Editar", "Edit", new { id = Model.SocioID })
-</div>
+<!DOCTYPE html>
+<html lang="pt">
+<head>
+    <meta charset="utf-8" />
+    <title>Detalhes do Sócio | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+</head>
+<body>
+    <div class="titulo"><h3>Detalhes do Sócio</h3></div>
+    <hr />
+    <div class="container painel">
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.NumSocio)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.NumSocio)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Nome)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Nome)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.BI)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.BI)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.NIF)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.NIF)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.DataNasc)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.DataNasc)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Email)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Email)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Telemovel)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Telemovel)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Morada)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Morada)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.CodPostal)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.CodPostal)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.Fotografia)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Fotografia)</div>
+
+        <div class="col-lg-6 dadosEsq">@Html.DisplayNameFor(model => model.DataInscr)</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.DataInscr)</div>
+
+        <div class="col-lg-6 dadosEsq">Categoria</div>
+        <div class="col-lg-6 dadosDir">@Html.DisplayFor(model => model.Categoria.Nome)</div>
+
+        
+    </div>
+    <div class="col-md-12" style="text-align:center; margin-top:20px; font-size:20px;">
+        @Html.ActionLink("Editar", "Edit", new { id = Model.SocioID })
+    </div>
+</body>
+</html>
 
