--- a/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Socios/Edit.cshtml
@@ -4,6 +4,7 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
+    <title>Editar Sócio | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
@@ -18,7 +19,7 @@
     <div class="titulo"><h3>Editar Sócio</h3></div>
     <hr />
 
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm("Edit", "Socios", FormMethod.Post, new { enctype = "multipart/form-data" })) {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal painel2">            
@@ -93,7 +94,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.Fotografia, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @type = "file", @maxlength = "30" } })
+                    @Html.EditorFor(model => model.Fotografia, new { htmlAttributes = new { @class = "form-control", @maxlength = "8" } })
+                    <input type="file" name="foto3" id="foto3" />
                     @Html.ValidationMessageFor(model => model.Fotografia, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -108,14 +110,10 @@
                 </div>
             </div>
 
-            @Html.HiddenFor(model => model.UserName)
-
-            <div class="form-group">
-                <div class="col-md-offset-2 col-md-10">
-                    @Html.ActionLink("Voltar à lista", "Index") |
-                    <input type="submit" value="Guardar" class="btn btn-primary" />
-                </div>
-            </div>
+            @Html.HiddenFor(model => model.UserName)            
+        </div>
+        <div class="col-md-12" style="text-align:center; margin-top:20px;">
+            <input type="submit" value="Guardar" class="btn btn-primary" />
         </div>
     }
     <script type="text/javascript">
