--- a/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Funcionarios/Edit.cshtml
@@ -103,7 +103,7 @@
             startView: 2,
             maxViewMode: 2,
             language: "pt",
-            orientation: "bottom left",
+            orientation: "top left",
             autoclose: true
         });
     </script>
