--- a/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
+++ b/PortalSocios/PortalSocios/Views/Home/Sobre.cshtml
@@ -18,7 +18,7 @@
     </script>
 </head>
 <body>
-    <div class="titulo"><h3>Sobre</h3></div>
+    <div class="titulo"><h2>Sobre</h2></div>
     <hr />
     <div class="container">
         <div class="row painel">
@@ -31,11 +31,11 @@
                 <h3>Utilizadores</h3>
                 <p><span class="tipo">Role:</span> Funcionario</p>
                 <p><span class="tipo">E-mail:</span> dalves@coxos.pt</p>
-                <p><span class="tipo">Palavra-chave:</span> 123qwe#</p>
+                <p><span class="tipo">Palavra-chave:</span> 123Qwe#</p>
                 <br />
                 <p><span class="tipo">Role:</span> Socio</p>
                 <p><span class="tipo">E-mail:</span> smodesto@gmail.com</p>
-                <p><span class="tipo">Palavra-chave:</span> 123qwe#</p>
+                <p><span class="tipo">Palavra-chave:</span> 123Qwe#</p>
             </div>
         </div>
     </div>
