--- a/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Details.cshtml
@@ -66,6 +66,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.UserName)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.UserName)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Funcionario.Nome)
         </dt>
 
