--- a/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
+++ b/PortalSocios/PortalSocios/Views/Shared/Error.cshtml
@@ -4,14 +4,14 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-    <title>Erro | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <title>Erro! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
     </style>
     <script>
     </script>
 </head>
 <body>
-    <div class="jumbotron" style="text-align:center">
+    <div class="jumbotron painel">
         <h1>ERRO!</h1>
         <p>Ocorreu um erro a processar a página...</p>
     </div>
