--- a/PortalSocios/PortalSocios/Content/bootstrap.css
+++ b/PortalSocios/PortalSocios/Content/bootstrap.css
@@ -339,14 +339,14 @@ textarea {
 }
 
 a {
-  color: #178ce1;
+  color: #191271;
   text-decoration: none;
   font-weight: bold;
 }
 
 a:hover,
 a:focus {
-  color: #a47e3c;
+  color: #3424ff;
   text-decoration: underline;
 }
 
@@ -391,7 +391,7 @@ hr {
   margin-top: 20px;
   margin-bottom: 20px;
   border: 0;
-  border-top: 1px solid #bababa;
+  border-top: 2px solid #000000;
 }
 
 .sr-only {
@@ -1413,21 +1413,19 @@ pre code {
 
 table {
   max-width: 100%;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(250, 250, 250, 0.6);
   white-space: nowrap;
   font-size: 14px;
   color: #000000;
-  margin: auto;
   border-radius: 5px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 10px;
 }
 
 th {
   text-align: left;
   font-size: 15px;
-}
-
-.table {
-  margin-bottom: 20px;
 }
 
 .table thead > tr > th,
@@ -1734,10 +1732,10 @@ input[type="number"]::-webkit-inner-spin-button {
   padding: 6px 12px;
   font-size: 14px;
   line-height: 1.428571429;
-  color: #555555;
+  color: #000000;
   vertical-align: middle;
   background-color: #ffffff;
-  border: 1px solid #cccccc;
+  border: 1px solid #000000;
   border-radius: 4px;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
@@ -3250,7 +3248,6 @@ input[type="button"].btn-block {
   z-index: 1000;
   display: none;
   float: left;
-  min-width: 160px;
   padding: 5px 0;
   margin: 2px 0 0;
   font-size: 14px;
@@ -4945,6 +4942,7 @@ a.list-group-item.active > .badge,
   font-weight: 200;
   line-height: 2.1428571435;
   color: inherit;
+  text-align:center;
 }
 
 .jumbotron h1 {
@@ -4957,7 +4955,8 @@ a.list-group-item.active > .badge,
 }
 
 .container .jumbotron {
-  border-radius: 6px;
+  border-radius: 15px;
+  margin-top:20px;
 }
 
 @media screen and (min-width: 768px) {
