--- a/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
+++ b/PortalSocios/PortalSocios/Views/Erros/NotFound.cshtml
@@ -2,14 +2,14 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-    <title>Erro 404 | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
+    <title>Erro! | Portal dos Sócios do Clube Desportivo Coxos da Bola</title>
     <style>
     </style>
     <script>
     </script>
 </head>
 <body>
-    <div class="jumbotron" style="text-align:center">
+    <div class="jumbotron painel">
         <h1>ERRO 404!</h1>
         <p>A página não foi encontrada...</p>
     </div>
