--- a/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
+++ b/PortalSocios/PortalSocios/Views/Manage/ChangePassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PortalSocios.Models.ChangePasswordViewModel
 
-<h2 class="titulo">Alterar a Palavra-passe</h2>
+<h2 class="titulo">Alterar a palavra-passe</h2>
 <hr />
 
 @using (Html.BeginForm("ChangePassword", "Manage", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
