--- a/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Pagamentos/Create.cshtml
@@ -83,6 +83,14 @@
                     @Html.ValidationMessageFor(model => model.QuotaFK, "", new { @class = "text-danger" })
                 </div>
             </div>
+            
+            <div class="form-group">
+                @Html.LabelFor(model => model.UserName, "Username", htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                </div>
+            </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.FuncionarioFK, "Funcionário", htmlAttributes: new { @class = "control-label col-md-2" })
