--- a/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Create.cshtml
@@ -11,12 +11,12 @@
 
     <div class="form-horizontal">
         <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.ValidationSummary(true, "")
         <div class="form-group">
             @Html.LabelFor(model => model.Referencia, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Referencia, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Referencia, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Referencia, "")
             </div>
         </div>
 
@@ -24,7 +24,7 @@
             @Html.LabelFor(model => model.AuxMontante, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AuxMontante, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.AuxMontante, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.AuxMontante, "")
             </div>
         </div>
 
@@ -32,15 +32,21 @@
             @Html.LabelFor(model => model.Ano, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Ano, new { htmlAttributes = new { @class = "form-control", @min = "2017", @max = "2500" } })
-                @Html.ValidationMessageFor(model => model.Ano, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.Ano, "")
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Periodicidade, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Periodicidade, new { htmlAttributes = new { @class = "form-control", @maxlength = "15" } })
-                @Html.ValidationMessageFor(model => model.Periodicidade, "", new { @class = "text-danger" })
+                <select id="Periodicidade" name="Periodicidade" class="form-control">
+                    <option value="Bimestral">Bimestral</option>
+                    <option value="Trimestral">Trimestral</option>
+                    <option value="Semestral">Semestral</option>
+                    <option value="Mensal">Mensal</option>
+                    <option value="Anual">Anual</option>
+                </select>
+                @Html.ValidationMessageFor(model => model.Periodicidade, "")
             </div>
         </div>
 
@@ -48,7 +54,7 @@
             @Html.LabelFor(model => model.CategoriaFK, "Categoria", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("CategoriaFK", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CategoriaFK, "", new { @class = "text-danger" })
+                @Html.ValidationMessageFor(model => model.CategoriaFK, "")
             </div>
         </div>
 
