--- a/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
+++ b/PortalSocios/PortalSocios/Views/Quotas/Edit.cshtml
@@ -43,8 +43,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Periodicidade, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Periodicidade, new { htmlAttributes = new { @class = "form-control", @maxlength = "15" } })
-                @Html.ValidationMessageFor(model => model.Periodicidade, "", new { @class = "text-danger" })
+                <select id="Periodicidade" name="Periodicidade" class="form-control">
+                    <option value="Bimestral">Bimestral</option>
+                    <option value="Trimestral">Trimestral</option>
+                    <option value="Semestral">Semestral</option>
+                    <option value="Mensal">Mensal</option>
+                    <option value="Anual">Anual</option>
+                </select>
+                @Html.ValidationMessageFor(model => model.Periodicidade, "")
             </div>
         </div>
 
